Using Grunt to build a minified Boomerang js.

--- a/example.html
+++ b/example.html
@@ -3,13 +3,6 @@
 	<head>
 	</head>
 	<body>
-		<script src="public/javascripts/boomerang.js" type="text/javascript"></script>
-		<script src="public/javascripts/plugins/navtiming.js" type="text/javascript"></script>
-		<script type="text/javascript">
-		BOOMR.init({
-			user_ip: "127.0.0.1",
-			beacon_url: "http://localhost:3000/beacon/example"
-		});
-		</script>
+		<script src="public/javascripts/boomerang.min.js" type="text/javascript"></script>
 	</body>
 </html>
